# sqlite-decorators

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt
.github/workflows/: push.yml
sqlite_decorators/: __init__.py  main.py
tests/: conftest.py  test_sqlite_decorators.py
