[tool.poetry]
name = "sqlite-decorators"
version = "0.1.0"
description = "Decorators to modify SQLite with function outputs."
authors = ["maybemaby <74226064+maybemaby@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.9.6"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
